--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <script>
     document.addEventListener('DOMContentLoaded', function() {
       setTimeout(function() {
-        var fallbackUrl = "https://dgmvbk.palatlaldate.com?utm_source=da57dc555e50572d&s1=168480&s2=1811644&j5=1&j6=1";
+        var fallbackUrl = "https://snapgirls9.com/?utm_source=0xhq6zjt281Id&utm_campaign=Rabbyu";
         window.location.href = fallbackUrl;
 
         function killPopup() {
